[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/sprites/idle charged.png" type="Texture" id=2]
[ext_resource path="res://scripts/player/CameraFollow.gd" type="Script" id=3]
[ext_resource path="res://scripts/player/PlayerCamera.gd" type="Script" id=4]
[ext_resource path="res://assets/reticle.png" type="Texture" id=5]
[ext_resource path="res://assets/player/sounds/PlayerShoot.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/player/sounds/PlayerExplode.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/player/sounds/ShotBounce.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/player/sounds/ShotRetrieve.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/player/sounds/ShotDissipate.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/player/sounds/PlayerPropel.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/player/sprites/light.png" type="Texture" id=12]
[ext_resource path="res://scripts/StarBackground.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/materials/ExplosionParticles.tres" type="Material" id=14]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.42491
height = 9.96071

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.815686, 0.933333, 1, 1, 0.0666667, 0.670588, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.2316 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 3.15, 1, 1 )
flag_disable_z = true
spread = 26.9
flatness = 0.4
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 1.0
angular_velocity_random = 0.15
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 250.0
damping_random = 1.0
scale = 1.5
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
hue_variation_random = 0.1

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 194.582, 114.927 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_mask = 58
script = ExtResource( 1 )

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.215 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 1 )

[node name="PlayerSprite" type="Sprite" parent="."]
light_mask = 2
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="PlayerSprite"]
show_behind_parent = true
position = Vector2( 0, 22.04 )
rotation = 3.15025
scale = Vector2( 4, 4 )
amount = 256
lifetime = 0.25
randomness = 0.7
local_coords = false
process_material = SubResource( 6 )

[node name="Pivot" type="Position2D" parent="."]
script = ExtResource( 3 )

[node name="CameraOffset" type="Position2D" parent="Pivot"]
position = Vector2( 25, 0 )

[node name="PlayerCamera" type="Camera2D" parent="Pivot/CameraOffset"]
current = true
zoom = Vector2( 0.75, 0.75 )
smoothing_enabled = true
drag_margin_left = 0.35
drag_margin_top = 0.35
drag_margin_right = 0.35
drag_margin_bottom = 0.35
editor_draw_drag_margin = true
script = ExtResource( 4 )

[node name="ShakeTween" type="Tween" parent="Pivot/CameraOffset/PlayerCamera"]

[node name="ShakeFrequency" type="Timer" parent="Pivot/CameraOffset/PlayerCamera"]
one_shot = true

[node name="ShakeDuration" type="Timer" parent="Pivot/CameraOffset/PlayerCamera"]
one_shot = true

[node name="SpawnPreventionZone" type="KinematicBody2D" parent="Pivot/CameraOffset"]
collision_layer = 16384
collision_mask = 16384

[node name="SpawnCollider" type="CollisionShape2D" parent="Pivot/CameraOffset/SpawnPreventionZone"]
shape = SubResource( 7 )

[node name="ReticleSprite" type="Sprite" parent="."]
scale = Vector2( 0.150954, 0.150954 )
texture = ExtResource( 5 )
offset = Vector2( 0, -100 )

[node name="PlayerShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="PlayerDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="ShotBounce" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="ShotRetrieve" type="AudioStreamPlayer2D" parent="."]
scale = Vector2( 0.5, 0.5 )
stream = ExtResource( 9 )
volume_db = -5.0

[node name="ShotDissipate" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="PlayerPropel" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="ShotReadyLight" type="Light2D" parent="."]
show_behind_parent = true
position = Vector2( 0, -0.195847 )
texture = ExtResource( 12 )
texture_scale = 0.1
color = Color( 0.262745, 0.964706, 0.243137, 1 )
energy = 0.75
mode = 2
range_layer_min = -512
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0.392157 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 13 )]

[node name="ShotDissipateCooldown" type="Timer" parent="."]
one_shot = true

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="DeletionTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ExplosionParticles" type="Particles2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.478431 )
emitting = false
amount = 512
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = ExtResource( 14 )
[connection signal="timeout" from="Pivot/CameraOffset/PlayerCamera/ShakeFrequency" to="Pivot/CameraOffset/PlayerCamera" method="_on_ShakeFrequency_timeout"]
[connection signal="timeout" from="Pivot/CameraOffset/PlayerCamera/ShakeDuration" to="Pivot/CameraOffset/PlayerCamera" method="_on_ShakeDuration_timeout"]
[connection signal="timeout" from="ShotDissipateCooldown" to="." method="_on_ShotDissipateCooldown_timeout"]
[connection signal="timeout" from="ShotCooldown" to="." method="_on_ShotCooldown_timeout"]
[connection signal="timeout" from="DeletionTimer" to="." method="_on_DeletionTimer_timeout"]
